--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Allison&display=swap");
+* {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* ONLY FOR THE FOOTER COMPONENT*/
+/* COPY FROM HERE */
+footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
   color: white;
+  background: rgba(0, 0, 0, 0.9);
+  border-top: 2px solid white;
+}
+footer p {
+  padding: 1em;
+  font-family: Courier !important;
+  margin: 0;
+}
+footer h1 {
+  text-align: right;
+  font-family: 'Allison', cursive !important;
+  letter-spacing: 1px;
+  padding: 1em 0em 0em 0em;
 }
 
-.App-link {
-  color: #61dafb;
+/* GITHUB LINK and Iter8 word */
+footer a,
+#github {
+  cursor: alias;
+  text-decoration: none;
+  color: rgb(122, 230, 154);
+}
+footer a:hover,
+#github:hover {
+  color: cyan;
+  transition: 0.4s linear;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* The things below "made with love by iter8" */
+
+#contact-iter8 {
+  font-family: Courier !important;
+
+  display: grid !important;
+  grid-template-areas:
+    "email vrule insta"
+    "number vrule github";
+  grid-template-rows: 30% 30%;
+  grid-template-columns: auto 1% 30%;
+}
+
+#c-email {
+  grid-area: email;
+  text-align: right;
+}
+/* Vertical rule */
+#v-rule {
+  height: 120%;
+  grid-area: vrule;
+  border-radius: 1px;
+  border-left: 2px solid white;
+}
+
+#github {
+  grid-area: github;
+}
+
+#insta {
+  grid-area: insta;
+}
+
+#iter8-components {
+  position: relative;
+  left: 0.85em;
+}
+/* FOOTER ENDS */
+/* FOOTER ENDS*/
+
+
+.container
+{
+  text-align: center;
+  border: 2px solid black;
+  height: 100vh;
+  padding-top: 5%;
+}
+.items
+{
+  border: 2px solid black;
+  width: 30%;
+  margin: 1em;
+  padding: 1em;
 }
