--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Allison&display=swap");
-* {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+@import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Roboto&display=swap");
+
+:root {
+  --pink: #f28ab2;
+  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+body {
+  background-color: #fff;
+}
+.hLine {
+  height: 3px;
+  width: 10vw;
+  background: inherit;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.hLineSub {
+  height: 100%;
+  width: 100%;
+  right: 100%;
+  background-color: black;
+  position: relative;
+  animation: hLine 0.7s ease-out 1s 1 forwards;
+}
+
+@keyframes hLine {
+  0% {
+    right: 100%;
+  }
+  100% {
+    right: 0%;
+  }
+}
+
+.mainHeading {
+  color: black;
+  text-align: center;
+
+  font-family: "Roboto", sans-serif;
+  font-family: "Didact Gothic", sans-serif;
+}
+.headingContainer {
+  margin: 3em;
 }
 
 /* ONLY FOR THE FOOTER COMPONENT*/
@@ -25,7 +64,7 @@ footer p {
 }
 footer h1 {
   text-align: right;
-  font-family: 'Allison', cursive !important;
+  font-family: "Allison", cursive !important;
   letter-spacing: 1px;
   padding: 1em 0em 0em 0em;
 }
@@ -83,18 +122,59 @@ footer a:hover,
 /* FOOTER ENDS */
 /* FOOTER ENDS*/
 
-
-.container
-{
+.container {
   text-align: center;
-  border: 2px solid black;
-  height: 100vh;
-  padding-top: 5%;
+  font-family: "Roboto", sans-serif;
 }
-.items
-{
-  border: 2px solid black;
+
+.infoDefault {
+  text-align: justify;
+  margin: 1em;
+}
+.imgDefault {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+}
+.items {
+  /* padding: 1em; */
+  transition: 0.2s ease-in-out;
   width: 30%;
   margin: 1em;
-  padding: 1em;
+  padding: 0em;
+  box-shadow: var(--shadow-1);
+  cursor: pointer;
+}
+
+.card-title {
+  transition: 0.1s ease-in-out;
+}
+
+.items:hover {
+  transform: scale(1.05);
+}
+.items:hover .hLineSubDefault {
+  animation: hLine 0.3s ease-out 1 forwards;
+}
+.items:hover .card-title {
+  letter-spacing: 3px;
+}
+/* H line for the default page. */
+.hLineSubDefault {
+  animation-name: none;
+}
+
+@keyframes hLine {
+  0% {
+    right: 100%;
+  }
+  100% {
+    right: 0%;
+  }
+}
+
+.btnBack {
+  position: absolute;
+  left: 10%;
+  top: 10%;
 }
