--- a/src/Components/Birthday_src/App.css
+++ b/src/Components/Birthday_src/App.css
@@ -26,6 +26,7 @@
 .brow {
   display: flex;
   flex-direction: row;
+  text-align: left  ;
   margin: 2em 0em;
 }
 .bcontainer {
@@ -33,9 +34,6 @@
   letter-spacing: 0.1rem;
   padding: 2em;
   margin: 5em auto;
-
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   border-radius: 0.25rem;
   background-color: whitesmoke;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
