--- a/src/Components/Tours_src/App.css
+++ b/src/Components/Tours_src/App.css
@@ -10,17 +10,16 @@
   box-sizing: border-box;
 }
 
-
-.tcard {
-  border-radius: 4px;
-  text-align: justify;
+.tCard {
   width: 100%;
   padding: 1em;
+  border-radius: 4px;
+  text-align: left;
   margin: 3rem auto;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.tcard img {
+.tCard img {
   border-radius: 4px;
   width: 100%;
   height: 20rem;
@@ -28,7 +27,7 @@
   object-fit: cover;
 }
 
-.tcard p {
+.tCard p {
   padding: 0.2rem 1rem;
 }
 
